--- a/DataTransfer/template.DataTransfer.csproj
+++ b/DataTransfer/template.DataTransfer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dominio\Dominio.csproj" />
+    <ProjectReference Include="..\Dominio\template.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
