--- a/Testes/Testes.csproj
+++ b/Testes/Testes.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dominio\Dominio.csproj" />
+    <ProjectReference Include="..\Dominio\template.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
