--- a/template.API/template.API.csproj
+++ b/template.API/template.API.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataTransfer\DataTransfer.csproj" />
+    <ProjectReference Include="..\DataTransfer\template.DataTransfer.csproj" />
   </ItemGroup>
 
 </Project>
